--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ certifi==2018.8.13
 chardet==3.0.4
 click==6.7
 dash==0.25.0
-dash_auth==1.0.0
+dash-auth==1.0.0
 dash-core-components==0.27.1
 dash-html-components==0.11.0
 dash-renderer==0.13.2
