--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,14 @@ certifi==2018.8.13
 chardet==3.0.4
 click==6.7
 dash==0.25.0
-dash-auth==1.0.0
+dash-auth==1.1.2
 dash-core-components==0.27.1
 dash-html-components==0.11.0
 dash-renderer==0.13.2
 decorator==4.3.0
 Flask==1.0.2
 Flask-Compress==1.4.0
+Flask-SeaSurf==0.2.2
 gunicorn==19.9.0
 idna==2.7
 ipython-genutils==0.2.0
